# openCeFaDB

./: .gitignore  README.md  requirements.txt  setup.cfg
examples/: plot_fan_curve.py
opencefadb/: __init__.py  cli.py  configuration.py  db-dataset-config.jsonld  utils.py
opencefadb/database/: __init__.py  core.py  dbinit.py
opencefadb/database/query_templates/: sparql.py
opencefadb/database/repositories/zenodo/: download.py
opencefadb/database/stores/filedb/: hdf5sqldb.py
opencefadb/database/stores/rdf_stores/filedb/: hdf5filedb.py
opencefadb/database/stores/rdf_stores/graphdb/: __init__.py  administration.py  connection.py  repository.py  store.py  url.py
opencefadb/database/stores/rdf_stores/rdffiledb/: rdffilestore.py
opencefadb/ontologies/: dcat.py
prod/: graphdb_and_sql.py
test_download/: metadata.jsonld
tests/: test_cad.py  test_database.py  test_download.py  test_ontologies.py  test_sql_graphdb_database.py  test_stores.py
